fixed remove button overflowing toggle in customizer block

--- a/src/blocks/customizer/editor.scss
+++ b/src/blocks/customizer/editor.scss
@@ -203,7 +203,8 @@
     }
 
     .ghostkit-customizer-list > div .ghostkit-customizer-list-remove {
-        right: 0;
+        top: 7px;
+        right: -1px;
     }
 
     .ghostkit-customizer-list > div::before {
